force-app/main/default/objects/Portfolio__c/fields/Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No__c</fullName>
    <label>Mobile No.</label>
    <length>18</length>
    <type>Text</type>
</CustomField>