force-app/main/default/objects/Portfolio__c/fields/Other_Certification__c.field-meta.xml
<CustomField>
    <fullName>Other_Certification__c</fullName>
    <label>Other Certification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>