force-app/main/default/objects/Portfolio__c/fields/Salesforce_CErtification__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_CErtification__c</fullName>
    <label>Salesforce Certification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certified Technical Architect (CTA)</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Administrator</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Advanced Administrator</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Application Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Associate</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified B2B Solution Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified B2C Commerce Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified B2C Commerce Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified B2C Solution Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Business Analyst</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified CPQ Specialist</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Data Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Development Lifecycle and Deployment Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Education Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Experience Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Field Service Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Heroku Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Identity and Access Management Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Industries CPQ Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Integration Architect</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified JavaScript Developer I</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Marketing Cloud Administrator</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Marketing Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Marketing Cloud Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Marketing Cloud Email Specialist</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Nonprofit Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified OmniStudio Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified OmniStudio Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Pardot Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Certified Pardot Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>