force-app/main/default/objects/Portfolio__c/fields/Tools_and_Software__c.field-meta.xml
<CustomField>
    <fullName>Tools_and_Software__c</fullName>
    <label>Tools and Software</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>