force-app/main/default/objects/Portfolio__c/fields/Version_Control__c.field-meta.xml
<CustomField>
    <fullName>Version_Control__c</fullName>
    <label>Version Control</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>